# spectra

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  go.mod  go.sum  spectra.example.yaml
client/go/: client.go
client/python/: pyproject.toml
client/rust/: Cargo.toml
client/rust/src/: lib.rs
client/typescript/: package.json
cmd/spectra/: main.go
cmd/spectra-cli/: main.go
docker/: Dockerfile  docker-compose.yml
docs/: api.md  architecture.md  cli.md  mcp.md  plugin-development.md  plugin-protocol.md  scheduler.md  webhooks.md
internal/api/: server.go
internal/config/: config.go
internal/domain/: browser.go  errors.go  job.go  plugin.go  schedule.go  session.go  webhook.go
internal/mcp/: server.go
internal/port/: browser_pool.go  job_store.go  metrics.go  monitor.go  plugin_manager.go  plugin_runtime.go  queue.go  recorder.go  scheduler.go  session.go  webhook_store.go
pkg/protocol/: jsonrpc.go  methods.go
plugins/ai/: main.go  plugin.json
plugins/ai-browse/: main.go  plugin.json
plugins/pdf/: main.go  plugin.json
plugins/recorder/: main.go  plugin.json
plugins/scrape/: main.go  plugin.json
plugins/screenshot/: main.go  plugin.json
plugins/stealth/: main.go  plugin.json
plugins/visual-diff/: main.go  plugin.json
scripts/: build-plugins.sh  install-and-test.sh  test-full-features.sh
sdk/go/: browser.go  spectra.go
sdk/rust/: Cargo.toml
sdk/typescript/: package.json  tsconfig.json
ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
ui/src/: App.tsx  index.css
(+52 files in other folders)
