[package]
name = "spectra-client"
version = "0.1.0"
edition = "2021"
description = "Rust client SDK for Spectra headless browser infrastructure"
license = "MIT"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
